--- a/Labs/Lab04/Students/truongvan_lab04/truongvan_lab04.ipynb
+++ b/Labs/Lab04/Students/truongvan_lab04/truongvan_lab04.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "def count_word(inp_str, inp_word):\n",
+    "def count_word(inp_str, inp_word):  # cách dùng hàm count của list\n",
     "    for char in inp_str:\n",
     "        if char.isalpha() == False:\n",
     "            inp_str = inp_str.replace(char, \" \")\n",
@@ -85,7 +85,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_word1(inp_str, inp_word):\n",
+    "    inp_str = inp_str.lower().split(\" \")  # convert all to list\n",
+    "    inp_word = inp_word.lower()\n",
+    "    count = 0\n",
+    "    \n",
+    "    for i in inp_str:\n",
+    "        if i == inp_word: \n",
+    "            count += 1\n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +127,7 @@
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
-    "test1(count_word)"
+    "test1(count_word1)"
    ]
   },
   {
@@ -145,18 +162,11 @@
     }
    ],
    "source": [
-    "def gcd_recursion_v2(a, b):\n",
+    "def gcd_recursion_v2(a, b):  # copy code\n",
     "    if b == 0:\n",
     "        return a\n",
-    "    return gcd_recursion_v2(b, a % b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return gcd_recursion_v2(b, a % b)\n",
+    "\n",
     "def reduce_fraction(a, b):\n",
     "    common_divisor = gcd_recursion_v2(a, b)\n",
     "    if common_divisor == 1:\n",
@@ -167,7 +177,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "(4.0, 1.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gcd(a, b):   # teacher's solution\n",
+    "    while b != 0:\n",
+    "        a, b = b, a%b\n",
+    "    return a\n",
+    "def reduce_fraction(a, b):\n",
+    "    gcd_num = gcd(a, b)\n",
+    "    return (a/gcd_num),  (b/gcd_num)\n",
+    "\n",
+    "print(gcd(20, 5))\n",
+    "print(reduce_fraction(20, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fibonacci(n):\n",
+    "def fibonacci(n):   # my code\n",
     "    lst = [1, 1]\n",
     "    if n == 0 or n==1: \n",
     "        return 1\n",
