--- a/Labs/Lab05/Students/truongvan_lab05/lab_05.ipynb
+++ b/Labs/Lab05/Students/truongvan_lab05/lab_05.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +53,28 @@
     "                inp_list[i], inp_list[min] = inp_list[min], inp_list[i]\n",
     "                min -= 1\n",
     "        return inp_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-99999999.0, -1000.0, -12.2, -12.2, 0.0, 3.14159, 20.0, 50.2, 90.12]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sol_sort_des(inp_list):\n",
+    "    return [inp_list[i] for i in range(len(inp_list)-1, 0, -1)]\n",
+    "sol_sort_des([90.12, 50.2, 20.0, 3.14159, 0.0, -12.2, -12.2, -1000.0, -99999999.0])"
    ]
   },
   {
@@ -118,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
+    "import math  ## my solution\n",
     "def sort_complex_list(arr):\n",
     "    for i in range(1, len(arr)):\n",
     "        j = i\n",
@@ -134,13 +156,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math  # teacher's solution\n",
+    "\n",
+    "def modulo(a, b):\n",
+    "    return math.sqrt(a**2 + b**2)\n",
+    "\n",
+    "def is_bigger_complex(num1, num2):\n",
+    "    return modulo(num1[0], num1[1]) > modulo(num2[0], num2[1])\n",
+    "\n",
+    "def bubble_sort(arr):\n",
+    "    for i in range(len(arr)-1, 0, -1):\n",
+    "        for j in range(i):\n",
+    "            if is_bigger_complex(arr[j], arr[j+1]):\n",
+    "                arr[j], arr[j+1] = arr[j+1], arr[j]\n",
+    "                \n",
+    "def sort_complex_list1(arr):\n",
+    "    bubble_sort(arr)\n",
+    "    return arr\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
-    "test2(sort_complex_list)"
+    "test2(sort_complex_list1)"
    ]
   },
   {
@@ -166,19 +213,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'id': 12, 'math': 9.5, 'literature': 4.3}, {'id': 984, 'math': 9.0, 'literature': 5.4}, {'id': 324, 'math': 9.0, 'literature': 5.4}, {'id': 1, 'math': 8.0, 'literature': 10}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def sort_student_grades(grade_list):\n",
+    "def sort_student_grades(grade_list):  # my solution1\n",
     "    for i in range(1, len(grade_list)):\n",
     "        j = i\n",
     "        while j>0:\n",
@@ -188,7 +227,41 @@
     "                grade_list[j], grade_list[j-1] = grade_list[j-1], grade_list[j]\n",
     "            j-=1\n",
     "    return grade_list \n",
-    "# cứ test đến test 8 là chết"
+    "# cứ test đến test 8 là chết\n",
+    "\n",
+    "def sort_student_grades2(grade_list):\n",
+    "    for i in range(1, len(grade_list)):\n",
+    "        j = i\n",
+    "        while j>0:\n",
+    "            if grade_list[j-1][\"math\"] > grade_list[j][\"math\"]:\n",
+    "                continue\n",
+    "            elif grade_list[j-1][\"math\"] == grade_list[j][\"math\"] and grade_list[j-1][\"literature\"] > grade_list[j][\"literature\"]:\n",
+    "                continue\n",
+    "            grade_list[j-1], grade_list[j] = grade_list[j], grade_list[j-1]\n",
+    "            j -= 1\n",
+    "    return grade_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_student_after(student1, student2):\n",
+    "    if student1['math'] != student2['math']:\n",
+    "        return student1['math'] < student2['math']\n",
+    "    return student1['literature'] < student2['literature']\n",
+    "\n",
+    "def bubble_sort(arr):\n",
+    "    for i in range(len(arr)-1, 0, -1):\n",
+    "        for j in range(i):\n",
+    "            if is_student_after(arr[j], arr[j+1]):\n",
+    "                arr[j], arr[j+1] = arr[j+1], arr[j]\n",
+    "                \n",
+    "def sort_student_grades1(grade_list):\n",
+    "    bubble_sort(grade_list)\n",
+    "    return grade_list"
    ]
   },
   {
@@ -199,7 +272,7 @@
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
-    "test3(sort_student_grades)"
+    "test3(sort_student_grades2)"
    ]
   },
   {
@@ -229,7 +302,7 @@
     }
    ],
    "source": [
-    "def merge_lists(arr1, arr2):\n",
+    "def merge_lists(arr1, arr2):  ### my solution, not optimal\n",
     "    # connect 2 arr\n",
     "    new_arr = arr1 + arr2\n",
     "    for i in range(len(new_arr)):\n",
@@ -245,13 +318,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def merge_lists1(arr1, arr2):  # teacher's solution\n",
+    "    n1= len(arr1)\n",
+    "    n2 = len(arr2)\n",
+    "    i= k =j=0\n",
+    "    arr3 = [0] *(n1+n2)\n",
+    "    while i<n1 and j<n2:\n",
+    "        if arr1[i]<arr2[j]:\n",
+    "            arr3[k] = arr1[i]\n",
+    "            i+=1\n",
+    "        else:\n",
+    "            arr3[k] = arr2[j]\n",
+    "            j+=1\n",
+    "        k += 1\n",
+    "    arr3[k:k+n1-i] = arr1[i:]\n",
+    "    k+=n1-i\n",
+    "    arr3[k:k+n2-j] = arr2[j:]\n",
+    "    return arr3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 10 cases.\n",
+      "- Test 1 PASSED.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "- Test 9 PASSED.\n",
+      "- Test 10 PASSED.\n",
+      "CONGRATULATIONS! All test cases passed!\n"
+     ]
+    }
+   ],
+   "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
-    "test4(merge_lists)"
+    "test4(merge_lists1)"
    ]
   },
   {
@@ -264,7 +381,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit (windows store)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -278,11 +395,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "03ee9ebc61fb24b4d29b1ef01f2ca513d3106518665cb0b5c92a24a88b5dc21d"
+    "hash": "2043299c89c8cd0b4d1a6f5cf4529bd58e6a4e0fe3181a25e0d328c821cdc5c5"
    }
   }
  },
