--- a/Labs/Lab06/Students/truongvan_lab06/truongvan_lab06.ipynb
+++ b/Labs/Lab06/Students/truongvan_lab06/truongvan_lab06.ipynb
@@ -151,7 +151,7 @@
     }
    ],
    "source": [
-    "def partition_mid(arr):\n",
+    "def partition_mid1(arr):  # cách này fail 2 cases\n",
     "    mid = (len(arr)-1) // 2\n",
     "    \n",
     "    pivot = arr[mid]  \n",
@@ -163,13 +163,36 @@
     "    return  arr, i+1\n",
     "    \n",
     "arr = [5, 9, 1, 12, 30, 35, 75, 10, 15, 20, 4, 0, 20, 0, 20, 3, 6, 14]\n",
-    "arr, ind = partition_mid(arr)\n",
+    "arr, ind = partition_mid1(arr)\n",
     "print(arr, ind) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def partition_mid(arr):\n",
+    "    mid = (len(arr)-1)//2\n",
+    "    pivot = arr[mid]\n",
+    "    left = 0\n",
+    "    right = len(arr) - 1\n",
+    "    while left <= right:\n",
+    "        while arr[left] < pivot:\n",
+    "            left += 1\n",
+    "        while arr[right] > pivot:\n",
+    "            right -=1\n",
+    "        if right >= left:\n",
+    "            arr[right], arr[left] = arr[left], arr[right]\n",
+    "            right -= 1\n",
+    "            left += 1\n",
+    "    return arr, left"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -181,11 +204,11 @@
       "- Test 2 PASSED.\n",
       "- Test 3 PASSED.\n",
       "- Test 4 FAILED: Wrong Answer.\n",
-      "- Test 5 PASSED.\n",
-      "- Test 6 PASSED.\n",
+      "- Test 5 FAILED: Wrong Answer.\n",
+      "- Test 6 FAILED: Wrong Answer.\n",
       "- Test 7 FAILED: Wrong Answer.\n",
-      "- Test 8 PASSED.\n",
-      "- Test 9 PASSED.\n",
+      "- Test 8 FAILED: Wrong Answer.\n",
+      "- Test 9 FAILED: Wrong Answer.\n",
       "Some test failed. Maybe check some code?\n"
      ]
     }
@@ -233,50 +256,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 3, 4, 5, 6, 9, 10, 12, 14, 15, 20, 20, 20, 30, 35, 75]\n",
+      "[0, 0, 1, 3, 4, 5, 6, 9, 10, 12, 14, 15, 20, 20, 20, 30, 35, 75]\n"
      ]
     }
    ],
    "source": [
-    "def partition_mid(arr):\n",
-    "    mid = (len(arr)-1) // 2\n",
+    "def partition_mid(arr, left, right):\n",
+    "    \n",
+    "    mid = (right + left-1) // 2\n",
     "    \n",
     "    pivot = arr[mid]  \n",
-    "    i = 0\n",
-    "    for j in range(1,len(arr)):\n",
-    "        if arr[j] < pivot:  \n",
+    "    i = left\n",
+    "    j = right -1\n",
+    "    while i <= j:\n",
+    "        while arr[i] < pivot:\n",
     "            i += 1\n",
-    "            arr[i], arr[j] = arr[j], arr[i] \n",
-    "    arr[i+1], arr[arr.index(pivot)] = arr[arr.index(pivot)], arr[i+1]\n",
-    "    return   i\n",
+    "        while arr[j] > pivot:\n",
+    "            j -= 1\n",
+    "        if i <= j:\n",
+    "            arr[i], arr[j] = arr[j], arr[i]\n",
+    "            i += 1\n",
+    "            j -= 1 \n",
+    "    return  i\n",
     "    \n",
-    "def quick_sort_mid_pivot(arr, left, right):\n",
+    "def quick_sort(arr, left, right):\n",
     "    if right-left <= 1: \n",
     "        return\n",
-    "    partition_index = partition_mid(arr)\n",
-    "    quick_sort_mid_pivot(arr, left, partition_index)    \n",
-    "    quick_sort_mid_pivot(arr, partition_index+1, right) \n",
-    "    \n",
+    "    partition_index = partition_mid(arr, left, right)\n",
+    "    quick_sort(arr, left, partition_index)    \n",
+    "    quick_sort(arr, partition_index, right) \n",
+    "\n",
+    "def quick_sort_mid_pivot(arr):\n",
+    "    quick_sort(arr, 0,  len(arr))\n",
+    "    return arr\n",
     "    \n",
     "arr = [5, 9, 1, 12, 30, 35, 75, 10, 15, 20, 4, 0, 20, 0, 20, 3, 6, 14]\n",
-    "quick_sort_mid_pivot(arr, 0, len(arr))\n",
-    "print(arr) "
+    "print(quick_sort_mid_pivot(arr))\n"
    ]
   },
   {
@@ -327,7 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def partition(arr, left, right):\n",
+    "def partition(arr, left, right):  ### bản không hoàn chỉnh\n",
     "    pivot = arr[left] \n",
     "    i = left\n",
     "    for j in range(left+1, right):\n",
@@ -349,7 +372,7 @@
     "    quick_sort(arr, partition_index+1, right) \n",
     "\n",
     "\n",
-    "def hybird_sort(arr):\n",
+    "def hybird_sort1(arr):\n",
     "    if len(arr) < 10:\n",
     "        for i in range(1, len(arr)):\n",
     "            j = i\n",
@@ -364,7 +387,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def partition_mid(arr, left, right):  ## official solution\n",
+    "    mid = (left + right - 1)//2\n",
+    "    pivot = arr[mid]\n",
+    "    i = left\n",
+    "    j = right -1\n",
+    "    while i <= j:\n",
+    "        while arr[i] < pivot: i+= 1\n",
+    "        while arr[j] > pivot : j -= 1\n",
+    "        if i <= j:\n",
+    "            arr[j], arr[i] = arr[i], arr[j]\n",
+    "            i+= 1\n",
+    "            j -= 1\n",
+    "    return i\n",
+    "def insertion_sort(arr, left, right):\n",
+    "    for i in range(left, right):\n",
+    "        j = i\n",
+    "        while j>left and arr[j-1] > arr[j]:\n",
+    "            arr[j-1], arr[j] = arr[j], arr[j-1]\n",
+    "            \n",
+    "\n",
+    "def hybird(arr, left, right):\n",
+    "    if right - left  <= 1:\n",
+    "        return \n",
+    "    ind = partition_mid(arr, left, right)\n",
+    "\n",
+    "    if ind - left < 10:\n",
+    "        insertion_sort(arr, left, ind)\n",
+    "    else:\n",
+    "        hybird(arr, left, ind)\n",
+    "        \n",
+    "    if right - ind < 10: \n",
+    "        insertion_sort(arr, ind, right)\n",
+    "    else:\n",
+    "        hybird(arr, ind, right)\n",
+    "    \n",
+    "def hybird_sort(arr):\n",
+    "    hybird(arr, 0, len(arr))\n",
+    "    return arr\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
