--- a/Homeworks/HW7/Homework 7. Thuật Toán Sắp Xếp (3).ipynb
+++ b/Homeworks/HW7/Homework 7. Thuật Toán Sắp Xếp (3).ipynb
@@ -34,13 +34,15 @@
     "    {'name': 'Tulip', 'price': 20000},\n",
     "    {'name': 'Chrysanthemum', 'price': 10000},\n",
     "    {'name': 'Sunflower', 'price': 20000}\n",
-    "]"
+    "\n",
+    "]\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -54,7 +56,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a42ccb73e7d9bfdf27e036f1d2b8b681e55fc0743cc5586bc2474d4a60f4b886"
+   }
   }
  },
  "nbformat": 4,
