--- a/Labs/Solutions/Đáp Án Lab 4 5 6.ipynb
+++ b/Labs/Solutions/Đáp Án Lab 4 5 6.ipynb
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -652,7 +652,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a42ccb73e7d9bfdf27e036f1d2b8b681e55fc0743cc5586bc2474d4a60f4b886"
+   }
   }
  },
  "nbformat": 4,
