--- a/Labs/Upcoming/Lab 7. Thuật Toán Sắp Xếp (3).ipynb
+++ b/Labs/Upcoming/Lab 7. Thuật Toán Sắp Xếp (3).ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +38,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('The Alley', 5.0),\n",
+       " ('Gongcha', 4.5),\n",
+       " ('Koi Thé', 4.5),\n",
+       " ('Phuc Long', 4.0),\n",
+       " ('Tocotoco', 4.0),\n",
+       " ('Share Tea', 3.5),\n",
+       " ('Soya', 3.5)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def counting_sort_rating(arr):\n",
-    "    pass"
+    "  # cách insertion sort\n",
+    "  for i in range(1, len(arr)):\n",
+    "    j = i\n",
+    "    while j>0 and arr[j][1] > arr[j-1][1]:\n",
+    "        arr[j], arr[j-1] = arr[j-1], arr[j]\n",
+    "        j-=1\n",
+    "  return arr\n",
+    "\n",
+    "arr = [('Phuc Long', 4.0), ('Tocotoco', 4.0), ('Share Tea', 3.5), ('Gongcha', 4.5), ('Soya', 3.5), ('Koi Thé', 4.5), ('The Alley', 5.0)]\n",
+    "counting_sort_rating(arr)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0, 0, 4, 3]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def counting(arr):\n",
+    "    count = [0]*6\n",
+    "    for name, rate in arr:\n",
+    "        if rate == int(rate):\n",
+    "            rate = int(rate)\n",
+    "            count[rate] += 1\n",
+    "        else:\n",
+    "            rate += 0.5\n",
+    "            rate = int(rate)\n",
+    "            count[rate] +=  1\n",
+    "    return count\n",
+    "arr = [('Phuc Long', 4.0), ('Tocotoco', 4.0), ('Share Tea', 3.5), ('Gongcha', 4.5), ('Soya', 3.5), ('Koi Thé', 4.5), ('The Alley', 5.0)]\n",
+    "counting(arr)"
    ]
   },
   {
@@ -56,6 +115,13 @@
     "# Check result on test cases\n",
     "test1(counting_sort_rating)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -82,19 +148,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_third_largest(arr):\n",
-    "    pass"
+    "    # không dùng count sort\n",
+    "    if len(set(arr)) <= 2: \n",
+    "        return 0\n",
+    "    for i in range(2):\n",
+    "        arr.remove(max(arr))\n",
+    "    return arr.count(max(arr))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 10 cases.\n",
+      "- Test 1 PASSED.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "- Test 9 FAILED: Wrong Answer.\n",
+      "- Test 10 FAILED: Wrong Answer.\n",
+      "Some test failed. Maybe check some code?\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -183,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,19 +289,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 12, 'math': 10, 'literature': 4},\n",
+       " {'id': 324, 'math': 10, 'literature': 5},\n",
+       " {'id': 984, 'math': 9, 'literature': 5},\n",
+       " {'id': 223, 'math': 8, 'literature': 8},\n",
+       " {'id': 543, 'math': 8, 'literature': 5},\n",
+       " {'id': 890, 'math': 5, 'literature': 7}]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sort_student_grades_math(grade_list):\n",
-    "    pass"
+    "    return sorted(grade_list, reverse = True, key = lambda grade_list: grade_list[\"math\"] )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 8 cases.\n",
+      "- Test 1 PASSED.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "CONGRATULATIONS! All test cases passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -333,7 +456,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -347,7 +470,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a42ccb73e7d9bfdf27e036f1d2b8b681e55fc0743cc5586bc2474d4a60f4b886"
+   }
   }
  },
  "nbformat": 4,
