--- a/Labs/Upcoming/Lab 7. Thuật Toán Sắp Xếp (3).ipynb
+++ b/Labs/Upcoming/Lab 7. Thuật Toán Sắp Xếp (3).ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,71 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('The Alley', 5.0),\n",
-       " ('Gongcha', 4.5),\n",
-       " ('Koi Thé', 4.5),\n",
-       " ('Phuc Long', 4.0),\n",
-       " ('Tocotoco', 4.0),\n",
-       " ('Share Tea', 3.5),\n",
-       " ('Soya', 3.5)]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def counting_sort_rating(arr):\n",
-    "  # cách insertion sort\n",
-    "  for i in range(1, len(arr)):\n",
-    "    j = i\n",
-    "    while j>0 and arr[j][1] > arr[j-1][1]:\n",
-    "        arr[j], arr[j-1] = arr[j-1], arr[j]\n",
-    "        j-=1\n",
-    "  return arr\n",
-    "\n",
-    "arr = [('Phuc Long', 4.0), ('Tocotoco', 4.0), ('Share Tea', 3.5), ('Gongcha', 4.5), ('Soya', 3.5), ('Koi Thé', 4.5), ('The Alley', 5.0)]\n",
-    "counting_sort_rating(arr)\n",
+    " pass\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 0, 0, 0, 4, 3]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def counting(arr):\n",
-    "    count = [0]*6\n",
-    "    for name, rate in arr:\n",
-    "        if rate == int(rate):\n",
-    "            rate = int(rate)\n",
-    "            count[rate] += 1\n",
-    "        else:\n",
-    "            rate += 0.5\n",
-    "            rate = int(rate)\n",
-    "            count[rate] +=  1\n",
-    "    return count\n",
-    "arr = [('Phuc Long', 4.0), ('Tocotoco', 4.0), ('Share Tea', 3.5), ('Gongcha', 4.5), ('Soya', 3.5), ('Koi Thé', 4.5), ('The Alley', 5.0)]\n",
-    "counting(arr)"
    ]
   },
   {
@@ -148,43 +90,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_third_largest(arr):\n",
-    "    # không dùng count sort\n",
-    "    if len(set(arr)) <= 2: \n",
-    "        return 0\n",
-    "    for i in range(2):\n",
-    "        arr.remove(max(arr))\n",
-    "    return arr.count(max(arr))"
+    "   pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing on 10 cases.\n",
-      "- Test 1 PASSED.\n",
-      "- Test 2 PASSED.\n",
-      "- Test 3 PASSED.\n",
-      "- Test 4 PASSED.\n",
-      "- Test 5 PASSED.\n",
-      "- Test 6 PASSED.\n",
-      "- Test 7 PASSED.\n",
-      "- Test 8 PASSED.\n",
-      "- Test 9 FAILED: Wrong Answer.\n",
-      "- Test 10 FAILED: Wrong Answer.\n",
-      "Some test failed. Maybe check some code?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -273,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,52 +207,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'id': 12, 'math': 10, 'literature': 4},\n",
-       " {'id': 324, 'math': 10, 'literature': 5},\n",
-       " {'id': 984, 'math': 9, 'literature': 5},\n",
-       " {'id': 223, 'math': 8, 'literature': 8},\n",
-       " {'id': 543, 'math': 8, 'literature': 5},\n",
-       " {'id': 890, 'math': 5, 'literature': 7}]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sort_student_grades_math(grade_list):\n",
-    "    return sorted(grade_list, reverse = True, key = lambda grade_list: grade_list[\"math\"] )"
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing on 8 cases.\n",
-      "- Test 1 PASSED.\n",
-      "- Test 2 PASSED.\n",
-      "- Test 3 PASSED.\n",
-      "- Test 4 PASSED.\n",
-      "- Test 5 PASSED.\n",
-      "- Test 6 PASSED.\n",
-      "- Test 7 PASSED.\n",
-      "- Test 8 PASSED.\n",
-      "CONGRATULATIONS! All test cases passed!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
