--- a/Homeworks/HW7/Students/truongvan_hw7/thanh/thanh_hw3.ipynb
+++ b/Homeworks/HW7/Students/truongvan_hw7/thanh/thanh_hw3.ipynb
@@ -21,17 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'name': 'Orchid', 'price': 100000}, {'name': 'Blue Rose', 'price': 20000}, {'name': 'Tulip', 'price': 20000}, {'name': 'Sunflower', 'price': 20000}, {'name': 'Lily', 'price': 12000}, {'name': 'Daisy', 'price': 12000}, {'name': 'Red Rose', 'price': 10000}, {'name': 'Chrysanthemum', 'price': 10000}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "flower_prices = [\n",
     "    {'name': 'Red Rose', 'price': 10000},\n",
@@ -44,62 +36,59 @@
     "    {'name': 'Sunflower', 'price': 20000}\n",
     "\n",
     "]\n",
-    "\n",
-    "print(sorted(flower_prices, reverse = True, key = lambda flower_prices: flower_prices[\"price\"]))"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'name': 'Red Rose', 'price': 10000},\n",
-       " {'name': 'Chrysanthemum', 'price': 10000},\n",
-       " {'name': 'Lily', 'price': 12000},\n",
-       " {'name': 'Daisy', 'price': 12000},\n",
-       " {'name': 'Blue Rose', 'price': 20000},\n",
-       " {'name': 'Tulip', 'price': 20000},\n",
-       " {'name': 'Sunflower', 'price': 20000},\n",
-       " {'name': 'Orchid', 'price': 100000}]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Red Rose\n",
+      "Chrysanthemum\n",
+      "Lily\n",
+      "Daisy\n",
+      "Blue Rose\n",
+      "Tulip\n",
+      "Sunflower\n",
+      "Orchid\n"
+     ]
     }
    ],
    "source": [
-    "def arrange_flower_prices(arr):\n",
-    "    \n",
+    "def sort(arr):\n",
+    "\n",
     "    if len(arr) <= 1:\n",
     "        return\n",
     "\n",
-    "    arr_price = []\n",
-    "\n",
+    "    price = []\n",
     "    for i in arr:\n",
-    "        arr_price.append(i[\"price\"])\n",
+    "        price.append(i[\"price\"])\n",
     "\n",
-    "    val_range = max(arr_price) // 1000 + 1\n",
+    "    val_range = max(price) - min(price) + 1\n",
     "\n",
-    "  \n",
     "    indices = [[] for i in range(val_range)]\n",
+    "\n",
     "    for i, flower in enumerate(arr):\n",
     "        price = flower[\"price\"] // 1000\n",
     "        indices[price].append(i)\n",
-    "    \n",
-    "    # traverse `count` to place the values into `sorted_arr`\n",
+    "\n",
     "    sorted_arr = [None] * len(arr)\n",
     "    index = 0\n",
     "    for i in range(val_range):\n",
     "        for original_index in indices[i]:\n",
     "            sorted_arr[index] = arr[original_index]\n",
-    "            index += 1           \n",
-    "    return sorted_arr\n",
+    "            index += 1\n",
     "\n",
-    "arrange_flower_prices(flower_prices)"
+    "    for i in range(0, len(arr)):\n",
+    "        print(sorted_arr[i]['name'])\n",
+    "\n",
+    "\n",
+    "sort(flower_prices)\n"
    ]
   }
  ],
