--- a/Labs/Lab06/Lab 6. Thuật Toán Sắp Xếp (2).ipynb
+++ b/Labs/Lab06/Lab 6. Thuật Toán Sắp Xếp (2).ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,19 +117,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def partition_mid(arr):\n",
-    "    pass"
+    "    mid = (len(arr)-1)//2\n",
+    "    pivot = arr[mid]\n",
+    "\n",
+    "    left = 0\n",
+    "    right = len(arr) - 1\n",
+    "    \n",
+    "    while left <= right:\n",
+    "        while arr[left] < pivot:\n",
+    "            left += 1\n",
+    "        while arr[right] > pivot:\n",
+    "            right -= 1\n",
+    "\n",
+    "        if left <= right:\n",
+    "            arr[left], arr[right] = arr[right], arr[left]\n",
+    "            left += 1\n",
+    "            right -= 1\n",
+    "    return arr, left\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 9 cases.\n",
+      "- Test 1 PASSED.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "- Test 9 PASSED.\n",
+      "CONGRATULATIONS! All test cases passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -155,9 +189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9999, 9998, 9997, 9996, 9995, 9994, 9993, 9992, 9991, 9990] ... [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "num_arr = [i for i in range(9999, -1, -1)]\n",
     "print(\"{} ... {}\".format(num_arr[:10], num_arr[-10:]))"
@@ -165,19 +207,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def quick_sort_mid_pivot(arr, left, right):\n",
-    "    pass"
+    "def partition_mid(arr):\n",
+    "    mid = (len(arr)-1)//2\n",
+    "    pivot = arr[mid]\n",
+    "    global left, right\n",
+    "    left = 0\n",
+    "    right = len(arr) - 1\n",
+    "    \n",
+    "    while left <= right:\n",
+    "        while arr[left] < pivot:\n",
+    "            left += 1\n",
+    "        while arr[right] > pivot:\n",
+    "            right -= 1\n",
+    "\n",
+    "        if left <= right:\n",
+    "            arr[left], arr[right] = arr[right], arr[left]\n",
+    "            left += 1\n",
+    "            right -= 1\n",
+    "    return left\n",
+    "\n",
+    "def quick_sort(arr, left, right):\n",
+    "    if left > right:\n",
+    "        return\n",
+    "    i = partition_mid(arr)\n",
+    "    quick_sort(arr,left,i)\n",
+    "    quick_sort(arr,i+1,right)\n",
+    "\n",
+    "\n",
+    "def quick_sort_mid_pivot(arr):\n",
+    "    quick_sort(arr,0, len(arr)-1)\n",
+    "    return arr\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -234,7 +321,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.1 64-bit",
+   "display_name": "Python 3.10.4 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -248,11 +335,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "1d0df3a001fc651470c855a5f152c71fa21be151a45d55dedf9376bb83f3db8f"
+    "hash": "03ee9ebc61fb24b4d29b1ef01f2ca513d3106518665cb0b5c92a24a88b5dc21d"
    }
   }
  },
