hw7, lab7 cua DUong

--- a/Homeworks/HW7/Students/DUONG/Homework 7. Thuật Toán Sắp Xếp (3).ipynb
+++ b/Homeworks/HW7/Students/DUONG/Homework 7. Thuật Toán Sắp Xếp (3).ipynb
@@ -21,9 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Red Rose', 'price': 10000}, {'name': 'Chrysanthemum', 'price': 10000}, {'name': 'Lily', 'price': 12000}, {'name': 'Daisy', 'price': 12000}, {'name': 'Blue Rose', 'price': 20000}, {'name': 'Tulip', 'price': 20000}, {'name': 'Sunflower', 'price': 20000}, {'name': 'Orchid', 'price': 100000}]\n"
+     ]
+    }
+   ],
    "source": [
     "flower_prices = [\n",
     "    {'name': 'Red Rose', 'price': 10000},\n",
@@ -36,7 +44,29 @@
     "    {'name': 'Sunflower', 'price': 20000}\n",
     "\n",
     "]\n",
-    "\n"
+    "\n",
+    "def sort_price(flower_prices): \n",
+    "    val_range = 101\n",
+    " \n",
+    "\n",
+    "    indices = [[] for i in range(val_range)]\n",
+    "    for i, flower in enumerate(flower_prices):\n",
+    "        price = int(flower['price'] / 1000)\n",
+    "        indices[price].append(i)\n",
+    "    \n",
+    "\n",
+    "    sorted_arr = [None] * len(flower_prices)\n",
+    "    index = 0\n",
+    "    for i in range(val_range):\n",
+    "        for original_index in indices[i]:\n",
+    "            sorted_arr[index] = flower_prices[original_index]\n",
+    "            index += 1\n",
+    "            \n",
+    "    return sorted_arr\n",
+    "       \n",
+    "\n",
+    "    \n",
+    "print(sort_price(flower_prices))    "
    ]
   }
  ],
