--- a/Labs/Lab07/Students/DUONG/Lab 7. Thuật Toán Sắp Xếp (3).ipynb
+++ b/Labs/Lab07/Students/DUONG/Lab 7. Thuật Toán Sắp Xếp (3).ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,20 +38,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('The Alley', 5.0), ('Gongcha', 4.5), ('Koi Thé', 4.5), ('Phuc Long', 4.0), ('Tocotoco', 4.0), ('Share Tea', 3.5), ('Soya', 3.5)]\n"
+     ]
+    }
+   ],
    "source": [
     "def counting_sort_rating(arr):\n",
-    "    pass\n",
-    "        "
+    "    val_range = 11\n",
+    "    count = [[] for i in range(val_range)]\n",
+    "    for i,review in enumerate(arr):\n",
+    "        rate = val_range - 1 - int(review[1]*2)\n",
+    "        count[rate].append(i)\n",
+    "    \n",
+    "    sorted_arr = [None] * len(arr)\n",
+    "    pointer = 0\n",
+    "    for i in range(val_range):\n",
+    "        for ori_i in count[i]:\n",
+    "            sorted_arr[pointer] = arr[ori_i]\n",
+    "            pointer+=1\n",
+    "    \n",
+    "    return sorted_arr\n",
+    "\n",
+    "list1 = [('Phuc Long', 4.0), ('Tocotoco', 4.0), ('Share Tea', 3.5), ('Gongcha', 4.5), ('Soya', 3.5), ('Koi Thé', 4.5), ('The Alley', 5.0)]\n",
+    "print(counting_sort_rating(list1))    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 10 cases.\n",
+      "- Test 1 PASSED.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "- Test 9 PASSED.\n",
+      "- Test 10 PASSED.\n",
+      "CONGRATULATIONS! All test cases passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -95,19 +137,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "def count_third_largest(arr):\n",
-    "   pass"
+    "   if len(arr) < 3: #trivial case\n",
+    "      return 0\n",
+    "   arr.sort(reverse=True)\n",
+    "   \n",
+    "   item_to_remove = arr[0]\n",
+    "   arr = [i for i in arr if i != item_to_remove]\n",
+    "   \n",
+    "   item_to_remove = arr[0]\n",
+    "   arr = [i for i in arr if i != item_to_remove]\n",
+    "   \n",
+    "   third = arr[0]\n",
+    "   count = 0\n",
+    "   for i in arr:\n",
+    "      if i == arr[0]:\n",
+    "         count+=1\n",
+    "      else:\n",
+    "         break   \n",
+    "   \n",
+    "   return count   \n",
+    "   \n",
+    "   \n",
+    "\n",
+    "print(count_third_largest([3, 2, 1, 5, 4, 7, 6, 6, 5]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 10 cases.\n",
+      "- Test 1 PASSED.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "- Test 9 PASSED.\n",
+      "- Test 10 PASSED.\n",
+      "CONGRATULATIONS! All test cases passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -196,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,19 +303,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sort_student_grades_math(grade_list):\n",
-    "   pass\n"
+    "   grade_list.sort(reverse = True, key = lambda x: x['math'])\n",
+    "   return grade_list\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 8 cases.\n",
+      "- Test 1 PASSED.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "CONGRATULATIONS! All test cases passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -244,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,9 +368,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('The Alley', 5.0),\n",
+       " ('Koi Thé', 4.5),\n",
+       " ('Gongcha', 4.5),\n",
+       " ('Tocotoco', 4.0),\n",
+       " ('Phuc Long', 4.0),\n",
+       " ('Soya', 3.5),\n",
+       " ('Share Tea', 3.5)]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sort_ratings(ratings):\n",
     "    return sorted(ratings, reverse=True, key=lambda rating: (rating[1], rating[0]))\n",
@@ -278,9 +404,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('The Alley', 5.0),\n",
+       " ('Gongcha', 4.5),\n",
+       " ('Koi Thé', 4.5),\n",
+       " ('Phuc Long', 4.0),\n",
+       " ('Tocotoco', 4.0),\n",
+       " ('Share Tea', 3.5),\n",
+       " ('Soya', 3.5)]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sort_ratings(ratings):\n",
     "    temp = sorted(ratings, key=lambda rating: rating[0])\n",
@@ -301,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,19 +460,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sort_student_grades_all(grade_list):\n",
-    "    pass"
+    "    math = sorted(grade_list, reverse=True,key = lambda x:(x['math'],x['literature']))\n",
+    "    return math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 8 cases.\n",
+      "- Test 1 PASSED.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "CONGRATULATIONS! All test cases passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -346,7 +507,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.1 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -360,11 +521,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "1d0df3a001fc651470c855a5f152c71fa21be151a45d55dedf9376bb83f3db8f"
+    "hash": "b2b9efa92f2bdac4bfda25c60f3f7d6c779c80601382838fe4225a699a59d380"
    }
   }
  },
